--- a/public/chat-window/styles.css
+++ b/public/chat-window/styles.css
@@ -1,10 +1,3 @@
-body {
-  font-family:'Avenir Next', 'Avenir', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  text-align:center;
-  font-size: 10px;
-  line-height: 1.4;
-}
-
 /* Container */
 .chat-container {
   width: 16rem;
@@ -57,6 +50,8 @@ body {
   color: #fff;
   font-size: 0.9rem;
   text-align: left;
+  max-height: 200px;
+  overflow-x: scroll;
 }
 
 .transcript li {
